feat: complete actors with validation implemented
