# api/controllers/validators/ActorValidator.js
@@ -1,6 +1,20 @@
 import { check } from "express-validator";
+import Actor from "../../models/ActorModel.js";
 
-const creationValidator = [
+const _checkActorEmailValid = async (value, { req }) => {
+  try {
+    const actorWithSameEmail = await Actor.findOne({ email: value });
+    if (actorWithSameEmail) {
+      return Promise.reject(new Error("Actor email already exists"));
+    } else {
+      return Promise.resolve("Actor email OK");
+    }
+  } catch (err) {
+    return Promise.reject(err);
+  }
+};
+
+const actorValidator = [
   check("name").exists({ checkNull: true, checkFalsy: true })
     .isString()
     .trim()
@@ -14,25 +28,49 @@ const creationValidator = [
     .isEmail()
     .trim()
     .escape()
-    .normalizeEmail(),
-  check("password").exists({ checkNull: true, checkFalsy: true })
-    .isString()
-    .isStrongPassword({ minLength: 5 }),
+    .normalizeEmail()
+    .custom(_checkActorEmailValid),
   check("preferredLanguage").optional()
     .isLocale()
     .trim()
     .escape(),
-  check("phone").exists({ checkNull: true, checkFalsy: true })
+  check("phone").optional()
+    .exists({ checkNull: true, checkFalsy: true })
     .isString()
     .trim()
     .escape(),
-  check("address").exists({ checkNull: true, checkFalsy: true })
+  check("address").optional()
+    .exists({ checkNull: true, checkFalsy: true })
     .isString()
     .trim()
     .escape(),
   check("role").exists({ checkNull: true, checkFalsy: true })
-    .isString()
+    .isArray()
     .isIn(["ADMINISTRATOR", "MANAGER", "EXPLORER", "SPONSOR"])
 ];
 
-export { creationValidator };
+const passwordValidator = [
+  check("password").exists({ checkNull: true, checkFalsy: true })
+    .isString()
+    .trim()
+    .escape()
+    .isStrongPassword({ minLength: 5 })
+];
+
+const passwordNotPresent = [
+  check("password")
+    .not()
+    .exists()
+];
+
+const banValidator = [
+  check("banned").exists({ checkNull: true })
+    .isBoolean()
+];
+
+export {
+  actorValidator,
+  passwordValidator,
+  banValidator,
+  passwordNotPresent
+};
